syntax = "proto3";

package forum;

option go_package = "github.com/LizaMeytner/foru/forum-service/proto";

import "google/protobuf/timestamp.proto";

service ForumService {
  // Post methods
  rpc CreatePost(CreatePostRequest) returns (Post) {}
  rpc GetPost(GetPostRequest) returns (Post) {}
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (Post) {}
  rpc DeletePost(DeletePostRequest) returns (Empty) {}

  // Comment methods
  rpc CreateComment(CreateCommentRequest) returns (Comment) {}
  rpc GetComment(GetCommentRequest) returns (Comment) {}
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse) {}
  rpc UpdateComment(UpdateCommentRequest) returns (Comment) {}
  rpc DeleteComment(DeleteCommentRequest) returns (Empty) {}

  // Chat methods
  rpc CreateChatMessage(CreateChatMessageRequest) returns (ChatMessage) {}
  rpc GetChatMessage(GetChatMessageRequest) returns (ChatMessage) {}
  rpc ListChatMessages(ListChatMessagesRequest) returns (ListChatMessagesResponse) {}
  rpc DeleteOldChatMessages(DeleteOldChatMessagesRequest) returns (Empty) {}
}

message Empty {}

// Post messages
message Post {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreatePostRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
}

message GetPostRequest {
  string id = 1;
}

message ListPostsRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total = 2;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

message DeletePostRequest {
  string id = 1;
}

// Comment messages
message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateCommentRequest {
  string post_id = 1;
  string user_id = 2;
  string content = 3;
}

message GetCommentRequest {
  string id = 1;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  int32 total = 2;
}

message UpdateCommentRequest {
  string id = 1;
  string content = 2;
}

message DeleteCommentRequest {
  string id = 1;
}

// Chat messages
message ChatMessage {
  string id = 1;
  string user_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateChatMessageRequest {
  string user_id = 1;
  string content = 2;
}

message GetChatMessageRequest {
  string id = 1;
}

message ListChatMessagesRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListChatMessagesResponse {
  repeated ChatMessage messages = 1;
  int32 total = 2;
}

message DeleteOldChatMessagesRequest {
  google.protobuf.Timestamp older_than = 1;
} 