syntax = "proto3";

package forum;

option go_package = "github.com/yourusername/forum/proto/forum";

service ForumService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (Empty);

  rpc CreateComment(CreateCommentRequest) returns (CommentResponse);
  rpc GetComment(GetCommentRequest) returns (CommentResponse);
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
  rpc UpdateComment(UpdateCommentRequest) returns (CommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (Empty);

  rpc CreateChatMessage(CreateChatMessageRequest) returns (ChatMessageResponse);
  rpc GetChatMessage(GetChatMessageRequest) returns (ChatMessageResponse);
  rpc ListChatMessages(ListChatMessagesRequest) returns (ListChatMessagesResponse);
}

message Empty {}

// Post messages
message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author_id = 3;
}

message GetPostRequest {
  string id = 1;
}

message ListPostsRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

message DeletePostRequest {
  string id = 1;
}

message PostResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ListPostsResponse {
  repeated PostResponse posts = 1;
}

// Comment messages
message CreateCommentRequest {
  string content = 1;
  string post_id = 2;
  string author_id = 3;
}

message GetCommentRequest {
  string id = 1;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message UpdateCommentRequest {
  string id = 1;
  string content = 2;
}

message DeleteCommentRequest {
  string id = 1;
}

message CommentResponse {
  string id = 1;
  string content = 2;
  string post_id = 3;
  string author_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ListCommentsResponse {
  repeated CommentResponse comments = 1;
}

// Chat messages
message CreateChatMessageRequest {
  string content = 1;
  string author_id = 2;
}

message GetChatMessageRequest {
  string id = 1;
}

message ListChatMessagesRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ChatMessageResponse {
  string id = 1;
  string content = 2;
  string author_id = 3;
  string created_at = 4;
}

message ListChatMessagesResponse {
  repeated ChatMessageResponse messages = 1;
} 